--- a/index.html
+++ b/index.html
@@ -11,17 +11,18 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
+<header>
 
+</header>
 <body>
 <section >
   <div  class="bg-img-container ">
     <img src="love/amanpulo.jpg" class="img-fluid" alt="Responsive Background Image">
     <div id="second">
       <h1 class="text-dark text-center text-white hero-largetext">Discover <span><i>Story-worthy</i></span>  Travel Moments</h1>
-      <p class="text-white text-center hero-samlltext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias maiores harum consequuntur illo. Dolore exercitationem, reiciendis aut assumenda nisi itaque distinctio aperiam accusamus quo. Alias consequatur modi aspernatur maxime consequuntur!</p>
+      <p class="text-white text-center hero-smalltext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias maiores harum consequuntur illo. Dolore exercitationem, reiciendis aut assumenda nisi itaque distinctio aperiam accusamus quo. Alias consequatur modi aspernatur maxime consequuntur!</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-        <button type="button" class="btn btn-primary btn-lg px-4">Secondary</button>
+        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Learn more</button>
       </div>
     </div>
 </div>
