--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
       <p class="text-white text-center hero-smalltext">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestias maiores harum consequuntur illo. Dolore exercitationem, reiciendis aut assumenda nisi itaque distinctio aperiam accusamus quo. Alias consequatur modi aspernatur maxime consequuntur!</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Learn more</button>
+        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Learn more</button>
       </div>
     </div>
 </div>
