--- a/index.html
+++ b/index.html
@@ -11,8 +11,70 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
   <title>Document</title>
 </head>
-<header>
-
+<header class="container">
+  <nav class="navbar fixed-top navbar-expand-lg navbar navbar-dark bg-dark">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="index.html"><i>
+        Amos Tara sa Palawan 
+      </i></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <form class="d-flex">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+        </form>
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 ">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Destination
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+               <li><a class="dropdown-item" href="https://www.elnidoresorts.com/">El Nido</a></li>
+              <li><a class="dropdown-item" href="https://puertoprincesa.ph/">Puerto Princesa City</a></li>
+              <li><a class="dropdown-item" href="https://taytaypalawan.gov.ph/">Taytay</a></li>
+              <li><a class="dropdown-item" href="https://taytaypalawan.gov.ph/">Brooke's Point</a></li>
+              <li><a class="dropdown-item" href="https://www.coron-travel.com/">Coron</a></li>
+              <li><a class="dropdown-item" href="https://www.aman.com/resorts/amanpulo">Cuyo</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">see all destinations</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Stories
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+               <li><a class="dropdown-item" href="#">Adventure Travel</a></li>
+              <li><a class="dropdown-item" href="#">Art and Culture</a></li>
+              <li><a class="dropdown-item" href="#">Beaches, Coast and Island</a></li>
+              <li><a class="dropdown-item" href="#">Family Holiday</a></li>
+              <li><a class="dropdown-item" href="#">Festival</a></li>
+              <li><a class="dropdown-item" href="#">Food and Drinks</a></li>
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">see all stories</a></li>
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Shop
+            </a>
+            <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <li><a class="dropdown-item" href="#">Destination Guide</a></li> 
+             <li><a class="dropdown-item" href="#">Pictorial and Gifts</a></li> 
+             <li><a class="dropdown-item" href="#">Phrasebooks</a></li> 
+              <li><hr class="dropdown-divider"></li>
+              <li><a class="dropdown-item" href="#">see all shops</a></li>
+            </ul>
+          </li>
+        
+        </ul>
+        <form class="d-flex "action="subscribe.html">
+          <button class="btn btn-outline-success" type="submit" action="subscribe.html">Subscribe</button>
+        </form>
+      </div>
+    </div>
+  </nav>
 </header>
 <body>
 <section >
