--- a/index.html
+++ b/index.html
@@ -88,6 +88,186 @@
       </div>
     </div>
 </div>
+
+<div class="album  bg-white">
+  <div class="container">
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/Miniloc-Island.jpg" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">24 hours Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/pangulasian-img-274x3001-274x300.jpg" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">Updated : 2 days Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/twin-lagoons.webp" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">Updated : 3 days Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/cuyo.jfif" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">Updated : 3 days Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/Balabac-2.jfif" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">Updated : 6 days Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/Balabac.jfif" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">Updated : 9 days Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/brookespoint.jfif" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">Updated : 10 days Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/missearth.jfif" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">Updated : 10 days Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="col">
+            <div class="card shadow-sm">
+              <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: Thumbnail" preserveAspectRatio="xMidYMid slice" focusable="false">
+                <title></title>
+                <rect width="100%" height="100%" fill=""/>
+                <image href="assets/images/bird_island.jfif" x="0" y="0" height="100%" width="100%" preserveAspectRatio="none"/>
+              </svg>
+              <div class="card-body">
+                <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam, voluptatem. Omnis et est cumque voluptas ipsam rerum at obcaecati dolore.</p>
+                <div class="d-flex justify-content-between align-items-center">
+                  <div class="btn-group">
+                    <button type="button" class="btn btn-sm btn-outline-secondary">View</button>
+                    <button type="button" class="btn btn-sm btn-outline-secondary">Book</button>
+                  </div>
+                  <small class="text-muted">20 days Ago</small>
+                </div>
+              </div>
+            </div>
+          </div>
+          
+    </div>
+
+  </div>
+</div>
 </section>
 </body>
 
