add plan your trip

--- a/index.html
+++ b/index.html
@@ -88,7 +88,14 @@
       </div>
     </div>
 </div>
-
+<section >
+  <div class="plan-your_trip">
+    <div class="album-text">
+        <p class="album_small-text">Plan your trip</p>
+        <h2 class="album_large-text" data-testid="page-heading">Where to next?</h2>
+      </div>
+    </div>
+</section>
 <div class="album  bg-white">
   <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
